[package]
name = "converter"
version = "0.1.0"
authors = ["Tom Watson <tom@tomjwatson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
regex = "1.4.3"
relm = "0.21.0"
relm-derive = "0.21.0"
